--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
+    "three": "^0.182.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
