--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:webpack": "next dev --turbo=false",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@sentry/nextjs": "10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.26.2",
-    "next": "16.1.2",
+    "next": "^16.1.2",
     "next-themes": "^0.4.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-lottie": "^1.2.10",
     "tailwind-merge": "^3.4.0",
